--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,17 @@
         >
 
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".login.LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/LoginActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
