--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:cardview-v7:26.1.0'
+    compile "com.android.support:support-emoji-appcompat:26.1.0"
+
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 
     compile ('io.socket:socket.io-client:1.0.0') {
         // excluding org.json which is provided by Android
