--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:8.8.1'
     kapt 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    testCompile "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
+    testCompile 'junit:junit:4.12'
 }
 repositories {
     mavenCentral()
