--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     kapt 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    compile 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.8.4'
+
     testCompile "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
     testCompile 'junit:junit:4.12'
 }
