--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="io.zenandroid.onlinego" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -30,7 +31,9 @@
             />
         <service
             android:exported="false"
-            android:name=".NotificationsService">
+            android:name=".NotificationsService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            >
             <intent-filter>
                 <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
             </intent-filter>
