--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,8 @@ android {
         applicationId "io.zenandroid.onlinego"
         minSdkVersion 19
         targetSdkVersion 26
-        versionCode System.getenv("APPCENTER_BUILD_ID") as Integer ?: 54
+//        versionCode System.getenv("APPCENTER_BUILD_ID") as Integer ?: 54
+        versionCode 54
         versionName "alpha_b${versionCode}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
