--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
 
     implementation 'com.android.support:design:27.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta5'
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation "com.android.support:support-emoji-appcompat:27.1.0"
 
