--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 27
 //        versionCode System.getenv("APPCENTER_BUILD_ID") as Integer ?: 54
-        versionCode 56
+        versionCode 57
         versionName "alpha_b${versionCode}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -53,6 +53,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta5'
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation "com.android.support:support-emoji-appcompat:27.1.0"
+    implementation "com.android.support:support-emoji-bundled:27.1.0"
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
