--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:2.3.0"
@@ -49,11 +49,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
 
-    implementation 'com.android.support:design:27.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta5'
-    implementation 'com.android.support:cardview-v7:27.1.0'
-    implementation "com.android.support:support-emoji-appcompat:27.1.0"
-    implementation "com.android.support:support-emoji-bundled:27.1.0"
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation "com.android.support:support-emoji-appcompat:27.1.1"
+    implementation "com.android.support:support-emoji:27.1.1"
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
