--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,9 +89,9 @@ dependencies {
     testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
     testImplementation 'junit:junit:4.12'
 
-    implementation 'android.arch.persistence.room:runtime:1.1.0'
-    implementation 'android.arch.persistence.room:rxjava2:1.1.0'
-    kapt 'android.arch.persistence.room:compiler:1.1.0'
+    implementation 'android.arch.persistence.room:runtime:1.1.1-rc1'
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1-rc1'
+    kapt 'android.arch.persistence.room:compiler:1.1.1-rc1'
 }
 repositories {
     mavenCentral()
