--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
@@ -41,6 +42,24 @@ androidExtensions {
     experimental = true
 }
 
+task generateGoogleJson {
+    doLast {
+        def output = new File("app/google-services.json")
+        def input = new File("secret.bin")
+        if (!output.exists()) {
+            def inputBytes = input.bytes
+            def outputBytes = new byte[inputBytes.size()]
+            def passwordBytes = System.env.SECRET_KEY.bytes
+            inputBytes.eachWithIndex { byte b, int i ->
+                outputBytes[i] = b ^ passwordBytes[i % passwordBytes.size()]
+            }
+            output.bytes = outputBytes
+        }
+    }
+}
+
+preBuild.dependsOn(generateGoogleJson)
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -63,7 +82,7 @@ dependencies {
     implementation 'com.xwray:groupie-kotlin-android-extensions:2.0.3'
 
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation "com.android.support:support-emoji-appcompat:27.1.1"
     implementation "com.android.support:support-emoji:27.1.1"
@@ -72,7 +91,7 @@ dependencies {
 
     implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
 
-    implementation ('io.socket:socket.io-client:1.0.0') {
+    implementation('io.socket:socket.io-client:1.0.0') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
@@ -81,7 +100,10 @@ dependencies {
 
     implementation 'br.com.simplepass:loading-button-android:1.8.3'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.google.firebase:firebase-core:16.0.0'
     kapt 'com.github.bumptech.glide:compiler:4.4.0'
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
 
     implementation 'com.jakewharton:butterknife:8.8.1'
     kapt 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -98,3 +120,5 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+apply plugin: 'com.google.gms.google-services'
