--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation "com.android.support:support-emoji-appcompat:27.1.1"
     implementation "com.android.support:support-emoji:27.1.1"
+    implementation 'com.android.support:preference-v14:27.1.1'
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
