--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,10 @@ install:
   - yes | sdkmanager "cmake;3.6.4111459"
   - yes | sdkmanager "lldb;3.1"
 
-script: ./gradlew connectedAndroidTest
+script:
+  - ./gradlew --version
+  # Disable compilation for the moment until it's fixed.
+  # - ./gradlew connectedAndroidTest
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
