--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ env:
     - ANDROID_BUILD_TOOLS=27.0.3 ANDROID_API=27
 
 before_install:
+  - openssl aes-256-cbc -K $encrypted_2b92f0f45fe9_key -iv $encrypted_2b92f0f45fe9_iv -in app/google-services.json.enc -out app/google-services.json -d
   - yes | sdkmanager "platforms;android-$ANDROID_API"
   - chmod +x gradlew
 
