--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-26
+    #- sys-img-armeabi-v7a-android-26
 
   licenses:
     - android-sdk-preview-license-.+
@@ -40,11 +40,11 @@ install:
   - yes | sdkmanager "lldb;3.1"
 
 # Create virtual device(s)
-before_script:
-  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+#before_script:
+#  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a
+#  - emulator -avd test -no-audio -no-window &
+#  - android-wait-for-emulator
+#  - adb shell input keyevent 82 &
 
 script:
   - ./gradlew --version
