Updated the estimator lib

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -19,4 +19,5 @@ add_library( # Specifies the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             src/main/cpp/estimator.cpp)
+             src/main/cpp/jnibindings.cpp
+        )
