--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.squareup.moshi:moshi-adapters:1.6.0'
 
     // rxandroid
@@ -66,7 +67,7 @@ dependencies {
     implementation 'com.xwray:groupie-kotlin-android-extensions:2.0.3'
 
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation "com.android.support:support-emoji-appcompat:27.1.1"
     implementation "com.android.support:support-emoji:27.1.1"
