--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,15 +60,18 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-adapters:1.6.0'
 
     // rxandroid
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
+
+    implementation "android.arch.work:work-runtime-ktx:1.0.0-beta01"
+    implementation "android.arch.work:work-rxjava2:1.0.0-beta01"
 
     // groupie
     implementation 'com.xwray:groupie:2.1.0'
     implementation 'com.xwray:groupie-kotlin-android-extensions:2.0.3'
 
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation "com.android.support:support-emoji-appcompat:27.1.1"
     implementation "com.android.support:support-emoji:27.1.1"
@@ -85,15 +88,15 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
 
-    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
 
     implementation 'br.com.simplepass:loading-button-android:1.14.0'
-    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
 
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
 
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 
     implementation 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.8.4'
 
