--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "io.zenandroid.onlinego"
         minSdkVersion 20
-        targetSdkVersion 27
+        targetSdkVersion 28
 //        versionCode System.getenv("APPCENTER_BUILD_ID") as Integer ?: 54
         versionCode 42
         versionName "alpha_b${versionCode}"
@@ -46,7 +46,8 @@ androidExtensions {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
@@ -73,12 +74,12 @@ dependencies {
     implementation 'com.xwray:groupie:2.1.0'
     implementation 'com.xwray:groupie-kotlin-android-extensions:2.0.3'
 
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation "com.android.support:support-emoji-appcompat:27.1.1"
-    implementation "com.android.support:support-emoji:27.1.1"
-    implementation 'com.android.support:preference-v14:27.1.1'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation "com.android.support:support-emoji-appcompat:28.0.0"
+    implementation "com.android.support:support-emoji:28.0.0"
+    implementation 'com.android.support:preference-v14:28.0.0'
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
@@ -94,14 +95,12 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
 
     implementation 'br.com.simplepass:loading-button-android:1.14.0'
-    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
 
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
-
-    implementation 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.8.4'
 
     testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
     testImplementation 'junit:junit:4.12'
