--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,8 @@ dependencies {
     testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
     testImplementation 'junit:junit:4.12'
 
+    implementation "androidx.core:core-ktx:1.1.0"
+
     implementation 'androidx.room:room-runtime:2.2.1'
     implementation 'androidx.room:room-rxjava2:2.2.1'
     kapt 'androidx.room:room-compiler:2.2.1'
