--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
 
         classpath 'io.fabric.tools:gradle:1.31.2'
+
+        classpath "org.koin:koin-gradle-plugin:2.1.5"
     }
 }
 
