--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.1'
     implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
-    implementation 'com.squareup.moshi:moshi-adapters:1.9.2'
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
 
     // rxandroid
@@ -129,6 +128,9 @@ dependencies {
 
     implementation 'androidx.room:room-runtime:2.2.5'
     implementation 'androidx.room:room-rxjava2:2.2.5'
+
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.4'
+
     kapt 'androidx.room:room-compiler:2.2.5'
 }
 repositories {
