--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity
             android:name="io.zenandroid.onlinego.ui.screens.main.MainActivity"
             android:screenOrientation="portrait"
+            android:configChanges="uiMode"
             />
         <meta-data
             android:name="preloaded_fonts"
