--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name=".OnlineGoApplication"
+        android:extractNativeLibs="true"
         android:maxAspectRatio="10.0"
         >
         <meta-data android:name="android.max_aspect" android:value="10.0"/>
