--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
     externalNativeBuild {
         cmake {
             path 'CMakeLists.txt'
+            version "3.10.2"
         }
     }
 }
