--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'koin'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     ndkVersion "21.0.6113669"
     defaultConfig {
         applicationId "io.zenandroid.onlinego"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 42
         versionName "alpha_b${versionCode}"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -50,25 +50,19 @@ android {
     }
 }
 
-// compose alpha 12 wants this
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        jvmTarget = "1.8"
-        freeCompilerArgs += ["-Xallow-jvm-ir-dependencies"]
-    }
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
+    implementation "io.coil-kt:coil-compose:1.3.2"
     //
     // Warning! do not upgrade this beyond 4.4.x as 4.5.0 brings in websocket compression
     // which for whatever reason causes issues.
@@ -82,7 +76,7 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
-    implementation "androidx.core:core-ktx:1.6.0-beta02"
+    implementation "androidx.core:core-ktx:1.7.0-beta02"
 
     // rxandroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -91,8 +85,8 @@ dependencies {
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
 
-    implementation "androidx.work:work-runtime-ktx:2.6.0-beta01"
-    implementation "androidx.work:work-rxjava2:2.6.0-beta01"
+    implementation "androidx.work:work-runtime-ktx:2.6.0"
+    implementation "androidx.work:work-rxjava2:2.6.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
@@ -103,8 +97,8 @@ dependencies {
     implementation 'com.xwray:groupie:2.8.1'
     implementation 'com.xwray:groupie-viewbinding:2.8.1'
 
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.material:material:1.5.0-alpha04'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.emoji:emoji-appcompat:1.1.0'
     implementation 'androidx.emoji:emoji:1.1.0'
@@ -130,7 +124,9 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
 
     implementation 'br.com.simplepass:loading-button-android:2.1.5'
-    implementation 'com.google.firebase:firebase-core:19.0.0'
+    implementation 'com.google.firebase:firebase-core:19.0.1'
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.1'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
 
     implementation 'io.noties.markwon:core:4.3.1'
 
@@ -142,13 +138,10 @@ dependencies {
 
     implementation "com.android.billingclient:billing-ktx:3.0.2"
 
-    implementation 'com.google.firebase:firebase-crashlytics:18.0.1'
-    implementation "androidx.core:core-ktx:1.5.0"
-
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-rxjava2:2.3.0'
 
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
     implementation 'com.github.cpiz:BubbleView:1.0.3'
 
     implementation "com.google.accompanist:accompanist-pager:0.18.0"
@@ -156,7 +149,7 @@ dependencies {
 
     kapt 'androidx.room:room-compiler:2.3.0'
 
-    implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
@@ -164,10 +157,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.insert-koin:koin-test-junit4:3.1.0"
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 }
 repositories {
     mavenCentral()
